--- a/notebooks/jiyoung/work1.ipynb
+++ b/notebooks/jiyoung/work1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "9c551278",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "3e41159b",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "0ced3c58",
    "metadata": {},
    "outputs": [],
@@ -2394,6 +2394,116 @@
     "rdf, r, m, v=ols_report(tbl1, mydata2)\n",
     "print('=== 7차 회귀분석 ===')\n",
     "display(rdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9625476a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 잔차 검정\n",
+    "print('='*50)\n",
+    "print('📕 선형성 검정')\n",
+    "print('='*50)\n",
+    "reset_res=linear_reset(fit, power=2, use_f=True)\n",
+    "print(f'RESET F-statistic: {reset_res.fvalue:.4f}')\n",
+    "print(f'p-value: {reset_res.pvalue:.4f}')\n",
+    "if reset_res.pvalue<0.05:\n",
+    "    print('선형성/기능형 위배 가능성이 있음 (5% 유의수준)')\n",
+    "else:\n",
+    "    print('선형성 가정 위배 근거 없음 (5% 유의수준)')\n",
+    "\n",
+    "(x,y),_=probplot(fit.resid)\n",
+    "width_px=1280\n",
+    "height_px=720\n",
+    "rows=1\n",
+    "cols=1\n",
+    "figsize=(width_px/my_dpi, height_px/my_dpi)\n",
+    "fig, ax=plt.subplots(rows, cols, figsize=figsize, dpi=my_dpi)\n",
+    "sb.regplot(x=x, y=y, line_kws={'color':'red', 'linestyle':'--', 'linewidth':2})\n",
+    "ax.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "plt.close()\n",
+    "\n",
+    "rr=fit.resid\n",
+    "mse_sq=fit.mse_resid\n",
+    "mse_root=np.sqrt(mse_sq)\n",
+    "colors=['#0B3C5D', '#328CC1', '#D9EAF7']\n",
+    "r1=rr[(rr>-mse_root)&(rr<mse_root)].count()/rr.count()*100\n",
+    "r2=rr[(rr>-2*mse_root)&(rr<2*mse_root)].count()/rr.count()*100\n",
+    "r3=rr[(rr>-3*mse_root)&(rr<3*mse_root)].count()/rr.count()*100\n",
+    "mse_r=[r1,r2,r3]\n",
+    "print(f'루트 1MSE 구간에 포함된 잔차 비율: {r1:.2f}%')\n",
+    "print(f'루트 2MSE 구간에 포함된 잔차 비율: {r2:.2f}%')\n",
+    "print(f'루트 3MSE 구간에 포함된 잔차 비율: {r3:.2f}%')\n",
+    "width_px=1280\n",
+    "height_px=720\n",
+    "rows=1\n",
+    "cols=1\n",
+    "figsize=(width_px/my_dpi, height_px/my_dpi)\n",
+    "fig, ax=plt.subplots(rows, cols, figsize=figsize, dpi=my_dpi)\n",
+    "sb.residplot(x=fit.fittedvalues, y=fit.resid)\n",
+    "ax.grid(True, alpha=0.3)\n",
+    "for i, c in enumerate(colors):\n",
+    "    k=i+1\n",
+    "    y_pos=k*mse_root\n",
+    "    ax.axhline(y=y_pos, color=c, linestyle='--', alpha=0.6)\n",
+    "    ax.axhline(y=-y_pos, color=c, linestyle='--', alpha=0.6)\n",
+    "    ax.text(x=1.02, y=0.5+0.12*k,\n",
+    "            s=f'+{k} √MSE = {mse_r[i]}%',\n",
+    "            transform=ax.transAxes,\n",
+    "            ha='left', va='center', fontsize=11, color=c)\n",
+    "    ax.text(x=1.02, y=0.5-0.12*k,\n",
+    "            s=f'-{k} √MSE = {mse_r[i]}%',\n",
+    "            transform=ax.transAxes,\n",
+    "            ha='left', va='center', fontsize=11, color=c)\n",
+    "plt.show()\n",
+    "plt.close()\n",
+    "\n",
+    "# 잔차의 정규성, 등분산성, 독립성 검정\n",
+    "print('='*50)\n",
+    "print('🎯 잔차의 정규성, 등분산성, 독립성 검정')\n",
+    "print('='*50)\n",
+    "if len(origin)<5000:\n",
+    "    method='Shapiro-Wilk'\n",
+    "    s, p=shapiro(fit.resid)\n",
+    "    print(f'{method} statistic: {s:.4f}, p-value: {p:.4f}')\n",
+    "    violated=p<0.05\n",
+    "else:\n",
+    "    method='Anderson-Darling'\n",
+    "    ad_res=anderson(fit.resid, dist='norm')\n",
+    "    crit_levels=ad_res.significance_level.tolist()\n",
+    "    crit_values=ad_res.critical_values.tolist()\n",
+    "    crit_5=crit_values[crit_levels.index(5.0)] if 5.0 in crit_levels else None\n",
+    "    print(f'{method} statistic: {ad_res.statistic:.4f}, 5% 임계값: {crit_5:.4f}')\n",
+    "    violated=crit_5 is not None and ad_res.statistic>crit_5\n",
+    "print('정규성 가정 위배 가능성이 있음 (5% 유의수준)' if violated else '정규성 가정 위배 근거 없음 (5% 유의수준)')\n",
+    "\n",
+    "names=['LM Statistic', 'LM p-value', 'F Statistic', 'F p-value']\n",
+    "bp_test=het_breuschpagan(fit.resid, fit.model.exog)\n",
+    "bp=DataFrame(bp_test, index=names, columns=['value'])\n",
+    "p_bp=bp.loc['F p-value', 'value']\n",
+    "print(f'Breusch-Pagan statistic: {bp.loc['F Statistic', 'value']:.3f}, p-value = {p_bp:.3f}')\n",
+    "print(f'{'이분산성 존재(등분산 아님)' if p_bp<=0.05 else '등분산성 만족'}')\n",
+    "\n",
+    "dw=durbin_watson(fit.resid)\n",
+    "if 1.5<=dw<=2.5:\n",
+    "    interpretation='잔차는 독립성을 만족함 (자기상관 없음)'\n",
+    "elif dw<1.5:\n",
+    "    interpretation='잔차에 양(+)의 자기상관이 존재할 가능성 있음 (독립성 위반)'\n",
+    "else:\n",
+    "    interpretation='잔차에 음(-)의 자기상관이 존재할 가능성 있음 (독립성 위반)'\n",
+    "print(f'Durbin-Watson={dw:.3f}\\n{interpretation}')\n",
+    "\n",
+    "# 최종 결과 보고\n",
+    "print('='*50)\n",
+    "print('🎓 최종 결과 보고')\n",
+    "print('='*50)\n",
+    "print(m)\n",
+    "print('\\n'.join(v))"
    ]
   },
   {
