--- a/notebooks/jinwoo/전처리.ipynb
+++ b/notebooks/jinwoo/전처리.ipynb
@@ -488,6 +488,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "45afd2de",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'origin' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# 중복 데이터 확인\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43morigin\u001b[49m.duplicated().sum()\n",
+      "\u001b[31mNameError\u001b[39m: name 'origin' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "id": "f4142fb8",
    "metadata": {},
